--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ authors = [
 ]
 dependencies = [
     "python-dotenv>=1.1.0",
-    "requests>=2.32.3"
+    "requests>=2.32.5",
+    "openai==1.109.1"
 ]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
 [tool.setuptools]
+py-modules = ["main"]
