--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 dependencies = [
     "python-dotenv>=1.1.0",
     "requests>=2.32.5",
-    "openai==1.109.1"
+    "openai==1.109.1",
+    "python-slugify>=8.0.4",
+    "pillow>=11.3.0"
 ]
 
 [build-system]
